add css reset and fix bug causing 6 not to bold

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="css-reset.css">
 	<link rel="stylesheet" href="styles.css">
 	<title>Bitmaker Photo Gallary</title>
 </head>
+
+	<body>
 	<header> 
 		<nav> 
 			<a href="#">Home</a>
@@ -14,8 +17,5 @@
 		</nav>
 			<h1> There are <span class="strong6"> 6 </span> photos </h1>
 	</header>
-
-<body>
-
 </body>
 </html>
