implement images into html index and reference the matching classes in the stylesheet

--- a/index.html
+++ b/index.html
@@ -9,13 +9,49 @@
 
 	<body>
 	<header> 
-		<nav> 
-			<a href="#">Home</a>
-			<a href="#">Add a photo</a>
-			<a href="#">About</a>
+		<nav class="navigationbar"> 
+			<a class="tabs" href="#">Home</a>
+			<a class="tabs" href="#">Add a photo</a>
+			<a class="tabs" href="#">About</a>
 
 		</nav>
 			<h1> There are <span class="strong6"> 6 </span> photos </h1>
 	</header>
-</body>
+
+	<main> 
+		<img class="1strow" src="https://unsplash.it/200/400?random=4564566"> 
+			<nav> 
+				<a href="#">Edit</a>
+				<a href="#">Delete</a>
+			</nav>
+		<img class="1strow" src="https://unsplash.it/200/400?random=48567365">
+		<nav> 
+				<a href="#">Edit</a>
+				<a href="#">Delete</a>
+			</nav> 
+		<img class="1strow" src="https://unsplash.it/200/400?random=4958672">
+		<nav> 
+				<a href="#">Edit</a>
+				<a href="#">Delete</a>
+			</nav> 
+		<img class="2ndrow" src="https://unsplash.it/200/400?random=3098475"> 
+		<nav> 
+				<a href="#">Edit</a>
+				<a href="#">Delete</a>
+			</nav>
+		<img class="2ndrow" src="https://unsplash.it/200/400?random=2049286"> 
+		<nav> 
+				<a href="#">Edit</a>
+				<a href="#">Delete</a>
+			</nav>
+		<img class="2ndrow" src="https://unsplash.it/200/400?random=11122345">
+		 <nav> 
+				<a href="#">Edit</a>
+				<a href="#">Delete</a>
+		</nav>
+	</main>
+
+		<footer> Bitmaker 2016 </footer>
+
+	</body>
 </html>
