completed final version

--- a/index.html
+++ b/index.html
@@ -9,46 +9,71 @@
 
 	<body>
 	<header> 
+		<h1 class="bitmaker"> Bitmaker Photo Gallery</h1>
 		<nav class="navigationbar"> 
 			<a class="tabs" href="#">Home</a>
 			<a class="tabs" href="#">Add a photo</a>
 			<a class="tabs" href="#">About</a>
 
 		</nav>
-			<h1> There are <span class="strong6"> 6 </span> photos </h1>
+
+			<h1> There are <span class="strong6">6</span> photos </h1>
 	</header>
 
 	<main> 
-		<img class="1strow" src="https://unsplash.it/200/400?random=4564566"> 
-			<nav> 
-				<a href="#">Edit</a>
-				<a href="#">Delete</a>
-			</nav>
-		<img class="1strow" src="https://unsplash.it/200/400?random=48567365">
-		<nav> 
-				<a href="#">Edit</a>
-				<a href="#">Delete</a>
-			</nav> 
-		<img class="1strow" src="https://unsplash.it/200/400?random=4958672">
-		<nav> 
-				<a href="#">Edit</a>
-				<a href="#">Delete</a>
-			</nav> 
-		<img class="2ndrow" src="https://unsplash.it/200/400?random=3098475"> 
-		<nav> 
-				<a href="#">Edit</a>
-				<a href="#">Delete</a>
-			</nav>
-		<img class="2ndrow" src="https://unsplash.it/200/400?random=2049286"> 
-		<nav> 
-				<a href="#">Edit</a>
-				<a href="#">Delete</a>
-			</nav>
-		<img class="2ndrow" src="https://unsplash.it/200/400?random=11122345">
-		 <nav> 
-				<a href="#">Edit</a>
-				<a href="#">Delete</a>
-		</nav>
+		<div class="firstrowwrapper">
+			<div class="firstrow">
+				<img src="https://unsplash.it/200/400?random=4564566"> 
+					<div class="tooltip">
+						<a href="#">Edit</a>
+						<a href="#">Delete</a>
+					</div>
+			</div>
+
+			<div class="firstrow">
+				<img src="https://unsplash.it/200/400?random=48567365">
+					<div class="tooltip">
+						<a href="#">Edit</a>
+						<a href="#">Delete</a>
+					</div>
+			</div>
+
+			<div class="firstrow">
+				<img src="https://unsplash.it/200/400?random=4958672">
+		 			<div class="tooltip">
+						<a href="#">Edit</a>
+						<a href="#">Delete</a>
+					</div>
+
+				</div>
+		</div>
+
+		<div class="secondrowwrapper">
+		
+			<div class="secondrow">
+				<img src="https://unsplash.it/200/400?random=3098475"> 
+					<div class="tooltip">
+						<a href="#">Edit</a>
+						<a href="#">Delete</a>
+					</div>
+			</div>
+
+			<div class="secondrow">
+				<img src="https://unsplash.it/200/400?random=2049286"> 
+		 			<div class="tooltip">
+						<a href="#">Edit</a>
+						<a href="#">Delete</a>
+					</div>
+			</div>
+
+			<div class="secondrow">
+				<img src="https://unsplash.it/200/400?random=11122345">
+		 			<div class="tooltip">
+						<a href="#">Edit</a>
+						<a href="#">Delete</a>
+					</div>
+			</div>
+		
 	</main>
 
 		<footer> Bitmaker 2016 </footer>
